--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -2,9 +2,5 @@ extends base.pug
 include mixins/video
 
 block content
-    h2 WEB3ers Are The New SEXY
-    ul 
-        each video in videoList 
-            +video(video)
-        else
-            li sorry nothing found.
+    h1 WEB3ers Are The New SEXY
+    h3 Beta version site is currently available. Alpha version comming soon.
