--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -1,7 +1,8 @@
 extends base.pug
 
 block content 
-    h4 Upload Video
+    if errorMessage 
+        span=errorMessage
     form(method="POST", action="/videos/upload")
         input(placeholder="Title", required, type="text", name="title")
         input(placeholder="Description", type="text", name="description")
