--- a/src/views/videos.pug
+++ b/src/views/videos.pug
@@ -2,4 +2,9 @@ extends base.pug
 include mixins/video
 
 block content
-    h2 Video List    
+    h2 Video List
+    ul
+        each video in videos
+            +video(video)
+        else 
+            li sorry nothing found.
