--- a/src/views/mixins/video.pug
+++ b/src/views/mixins/video.pug
@@ -3,6 +3,7 @@ mixin video(video)
         h4
             a(href=`/videos/${video.id}`)=video.title 
         p=video.description
+        p=video.hashtags
         small=video.createdAt
         hr
     
