--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -4,4 +4,8 @@ block content
     div
         p=video.description
         small=video.createdAt
+        p=video.description
+        p=video.hashtags
+        p=video.tickers 
     a(href=`${video.id}/edit`) Edit Video &rarr;
+    
