--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -4,8 +4,8 @@ block content
     if errorMessage 
         span=errorMessage
     form(method="POST", action="/videos/upload")
-        input(placeholder="Title", required, type="text", name="title")
+        input(placeholder="Title", type="text", name="title", required)
         input(placeholder="Description", type="text", name="description")
-        input(placeholder="Hashtags, separated by comma.", required, type="text", name="hashtags")
-        input(placeholder="Tickers, separated by comma.", required, type="Text", name="tickers")
-        input(type="submit", value="Upload Video")
+        input(placeholder="Hashtags, separated by comma.", type="text", name="hashtags", required)
+        input(placeholder="Tickers, separated by comma.", type="Text", name="tickers", required)
+        input(value="Upload Video", type="submit")
