--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -2,8 +2,8 @@ extends base
 
 block content 
     form(method="POST")
-        input(placeholder="e-mail", type="text", name="email", required)
-        input(placeholder="password", type="text", name="password", required)        
+        input(placeholder="e-mail", type="email", name="email", required)
+        input(placeholder="password", type="password", name="password", required)        
         input(type="submit", value="Login")
     span Don't have an account yet?
     a(href="/signup") Register
