--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -5,5 +5,7 @@ block content
         input(placeholder="e-mail", type="email", name="email", required)
         input(placeholder="password", type="password", name="password", required)        
         input(type="submit", value="Login")
+        br
+        a(href="/user/github/start") Log-in with Github
     span Don't have an account yet?
     a(href="/signup") Register
