github login finished

--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -24,6 +24,8 @@ header
             if loggedInUser
                 li 
                     a(href="/user") account
+                li 
+                    a(href="/user/logout") logout
             else 
                 li 
                     a(href="/login") login                 
