--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -1,6 +1,8 @@
 extends base
 
-block content 
+block content
+    if errorMessage 
+        span=errorMessage
     form(method="POST")
         input(placeholder="e-mail", type="email", name="email", required)
         input(placeholder="password", type="password", name="password", required)        
