--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -8,6 +8,7 @@ block content
         input(placeholder="password", type="password", name="password", required)        
         input(type="submit", value="Login")
         br
-        a(href="/user/github/start") Log-in with Github
+        a(href="/user/github/start") Login with Github
+        a(href="/user/google/start") Login with Google
     span Don't have an account yet?
     a(href="/signup") Register
