starting discord login

--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -10,5 +10,8 @@ block content
         br
         a(href="/user/github/start") Login with Github
         a(href="/user/google/start") Login with Google
+        a(href="/user/discord/start") Login with Discord
+        br
+        a(href="/user/wallet/start") Login with Web3 Wallet
     span Don't have an account yet?
     a(href="/signup") Register
