--- a/src/views/sign_up.pug
+++ b/src/views/sign_up.pug
@@ -4,7 +4,7 @@ block content
     if errorMessage
         span=errorMessage
     form(method="POST")
-        input(placeholder="e-mail", type="eamil", name="email", required)
+        input(placeholder="e-mail", type="email", name="email", required)
         input(placeholder="password", type="password", name="password", required)
         input(placeholder="confirm password", type="password", name="password2", required)
         input(placeholder="username", type="text", name="username", required)
