--- a/src/views/video_upload.pug
+++ b/src/views/video_upload.pug
@@ -3,7 +3,9 @@ extends base
 block content 
     if errorMessage 
         span=errorMessage
-    form(method="POST", action="/videos/upload")
+    form(method="POST", enctype="multipart/form-data")
+        label(for="video") Video File
+        input(type="file", accept="video/*", id="video", name="video", required)
         input(placeholder="Title", type="text", name="title", required)
         input(placeholder="Description", type="text", name="description")
         input(placeholder="Hashtags, separated by comma.", type="text", name="hashtags", required)
