--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -1,6 +1,7 @@
 extends base
 
 block content 
+    video(src="/" + video.filePath, controls)
     div
         p=video.description
         small=video.createdAt
