--- a/src/views/sign_up.pug
+++ b/src/views/sign_up.pug
@@ -3,11 +3,13 @@ extends base
 block content
     if errorMessage
         span=errorMessage
-    form(method="POST")
+    form(method="POST", enctype="multipart/form-data")
         input(placeholder="e-mail", type="email", name="email", required)
         input(placeholder="password", type="password", name="password", required)
         input(placeholder="confirm password", type="password", name="password2", required)
         input(placeholder="username", type="text", name="username", required)
+        label(for="avatar") Avatar 
+        input(type="file", id="avatar", name="avatar", accept="image/*")       
         input(type="submit", value="Join Webster!")
     span Already have an account?
     a(href="/login") login
