--- a/src/views/users/edit_profile.pug
+++ b/src/views/users/edit_profile.pug
@@ -2,7 +2,10 @@ extends ../base
 
 block content 
     span=errorMessage
-    form(method="POST")        
+    img(src=loggedInUser.avatarPath, width="100", height="100")
+    form(method="POST", enctype="multipart/form-data")
+        label(for="avatar") Avatar 
+        input(type="file", id="avatar", name="avatar", accept="image/*")       
         input(placeholder="e-mail", type="email", name="email", value=loggedInUser.email)        
         input(placeholder="username", type="text", name="username", value=loggedInUser.username)
         input(type="submit", value="Complete edit")
