--- a/src/views/users/account.pug
+++ b/src/views/users/account.pug
@@ -1,10 +1,22 @@
 extends ../base
+include ../mixins/video
 
 block content
-    if loggedInUser
-        img(src=loggedInUser.avatarPath, width="100", height="100")
+    img(src=user.avatarPath, height="100")
+    div
         span username : 
-        span=loggedInUser.username
+        span=user.username
+    if(String(loggedInUser._id) === String(user._id))
+        span=user.email
+    hr    
+    div Uploaded Videos
+        each video in user.videos 
+            +video(video)
+        else 
+            li There are no videos uploaded by this user.
+    
+    if(String(loggedInUser._id) === String(user._id))
         span Sync Accounts 
         span Sync Wallets
         a(href="/user/edit") Edit profile
+    
