--- a/src/views/users/edit_profile.pug
+++ b/src/views/users/edit_profile.pug
@@ -2,7 +2,7 @@ extends ../base
 
 block content 
     span=errorMessage
-    img(src=loggedInUser.avatarPath, width="100", height="100")
+    img(src="/" + loggedInUser.avatarPath, width="100", height="100")
     form(method="POST", enctype="multipart/form-data")
         label(for="avatar") Avatar 
         input(type="file", id="avatar", name="avatar", accept="image/*")       
