--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -5,8 +5,12 @@ block content
     div
         p=video.description
         small=video.createdAt
+        br
+        small Uploaded by 
+            a(href=`/user/${video.owner._id}`) #{video.owner.username}
         p=video.description
         p=video.hashtags
         p=video.tickers
-    a(href=`${video.id}/edit`) Edit Video &rarr;
+    if String(video.owner._id) === String(loggedInUser._id)
+        a(href=`${video.id}/edit`) Edit Video &rarr;
     
