--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -7,4 +7,5 @@ html(lang="en")
         include partials/header.pug
         main
             block content
-    include partials/footer.pug
+    include partials/footer
+    script(src="/static/js/main.js")
